crates/tui/src/ui/snapshots/mxr_tui__ui__updates_lens__tests__updates_lens_clear_120.snap
---
source: crates/tui/src/ui/updates_lens.rs
expression: rendered
---
"╭ Updates ─ Notifications gathered twice a day. Read the digest, then let go. ─────────────────────────────────────────╮"
"│  This morning's digest · 08:00 · 0 updates from 0 sources                                                            │"
"│                                                                                                                      │"
"│  Nothing new since 08:00. Next digest at 16:30.                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ A let go of digest  e let go of this source  t this needs me  K tune a source  L open the link  o open the email  u… │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
