crates/tui/src/ui/snapshots/mxr_tui__ui__updates_lens__tests__updates_lens_clear_60.snap
---
source: crates/tui/src/ui/updates_lens.rs
expression: rendered
---
"╭ Updates ─ Notifications gathered twice a day. Read the di╮"
"│  This morning's digest · 08:00 · 0 updates from 0 sour…  │"
"│                                                          │"
"│  Nothing new since 08:00. Next digest at 16:30.          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│ A let go of digest  e let go of this source  t this nee… │"
"╰──────────────────────────────────────────────────────────╯"
