crates/tui/src/ui/snapshots/mxr_tui__ui__updates_lens__tests__updates_lens_first_card_60.snap
---
source: crates/tui/src/ui/updates_lens.rs
expression: rendered
---
"╭ Updates ─ Notifications gathered twice a day. Read the di╮"
"│  This morning's digest · 08:00 · 26 updates from 10 so…  │"
"│  2 need a look, 2 changed. 22 routine from 6 sources.    │"
"│                                                          │"
"│  │ Updates gathers notifications into a digest at 08:00  │"
"│  │ and 16:30, one line per source, like your bank or     │"
"│  │ GitHub, with what changed first. Anything that needs  │"
"│  │ you sits at the top with a suggested to-do that t     │"
"│  │ adds, so you can read this and let it go.             │"
"│  │ A let go of digest · e let go of this source · t      │"
"│  │ this needs me · K tune a source · Esc close           │"
"│                                                          │"
"│ ── Needs a look ──────────────────────────────────────── │"
"│▌ ! Google         Security alert: New sign-in from Chrom…│"
"│  ! Stripe (stri…  Payout of R 4,210.00 failed: bank decl…│"
"│      Suggested to-do: failed payment from Stripe         │"
"│      (stripe.com) (rule). t adds it.                     │"
"│                                                          │"
"│ ── Changed ───────────────────────────────────────────── │"
"│  ◆ Bookshop       Parcel out for delivery · [### ] · Arr…│"
"│  ◆ Strava         Your week in running: 21.3 km over 3 r…│"
"│                                                          │"
"│ ── Routine ───────────────────────────────────────────── │"
"│    Vercel         Deployment succeeded for acme-web     7│"
"│    Uptime Robot   All monitors up                       6│"
"│    Linear         3 issues moved to Done                5│"
"│    Plausible      Weekly report: 998 visitors            │"
"│ Here because: automated sender (rule). In the 08:00 dig… │"
"│ A let go of digest  e let go of this source  t this nee… │"
"╰──────────────────────────────────────────────────────────╯"
