crates/tui/src/ui/snapshots/mxr_tui__ui__updates_lens__tests__updates_lens_populated_120.snap
---
source: crates/tui/src/ui/updates_lens.rs
expression: rendered
---
"╭ Updates ─ Notifications gathered twice a day. Read the digest, then let go. ─────────────────────────────────────────╮"
"│  This morning's digest · 08:00 · 26 updates from 10 sources                                             A let go all │"
"│  2 need a look, 2 changed. 22 routine from 6 sources.                                                                │"
"│                                                                                                                      │"
"│ ── Needs a look ──────────────────────────────────────────────────────────────────────────────────────────────────── │"
"│▌ ! Google              Security alert: New sign-in from Chrome on Windows · 06:12 · (already in To do)               │"
"│  ! Stripe              Payout of R 4,210.00 failed: bank declined                                                    │"
"│                                                                                                                      │"
"│ ── Changed ───────────────────────────────────────────────────────────────────────────────────────────────────────── │"
"│  ◆ Bookshop            Parcel out for delivery · [### ] · Arriving by Thu 8 Oct · DHL                                │"
"│  ◆ Strava              Your week in running: 21.3 km over 3 runs · up 12% on last week                               │"
"│                                                                                                                      │"
"│ ── Routine ───────────────────────────────────────────────────────────────────────────────────────────────────────── │"
"│    Vercel              Deployment succeeded for acme-web                                                            7│"
"│    Uptime Robot        All monitors up                                                                              6│"
"│    Linear              3 issues moved to Done                                                                       5│"
"│    Plausible           Weekly report: 998 visitors                                                                   │"
"│  > 2 quieter sources · 3 updates                                                                                     │"
"│                                                                                                                      │"
"│  4 updates from muted sources not shown.                                                                             │"
"│                                                                                                                      │"
"│ ── since 08:00: 3 (Notion, GitHub 2) ─────────────────────────────────────────────────────────────────────────────── │"
"│  1 expired since you last looked.                                                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│ Here because: automated sender (rule). In the 08:00 digest.                                                          │"
"│ A let go of digest  e let go of this source  t this needs me  K tune a source  L open the link  o open the email  u… │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
